<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/spinner_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/job_type"
        android:textSize="@dimen/text_size_medium" />

    <Spinner
        android:id="@+id/job_types_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/spinner_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/job_category"
        android:textSize="@dimen/text_size_medium" />

    <Spinner
        android:id="@+id/job_categories_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_company_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/job_company"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/edit_text_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/label_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/job_location"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkbox_telecommuting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_details_telecommuting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_submit_job_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_search"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>